crates/compiler/test_syntax/tests/snapshots/pass/pattern_as_list_rest.expr.formatted.roc
when myList is
    [first, .. as rest] -> 0