crates/compiler/test_syntax/tests/snapshots/fail/error_inline_alias_qualified.expr.roc
f : List elem -> [Nil, Cons elem a] as Module.LinkedList a
